@@ -2,6 +2,7 @@
 	- nsd-control delzone zone.  Removes zone from zonelist.
 	- stats includes number of zones.
 	- RAXFR stat, which has not worked since NSD 1.2.4, reinstated.
+	- print more memory statistics, for xfrd and config.
 
 28 June 2011: Wouter
 	- nsd-control addzone zone pattern.  Adds new zone, slave or master.
